[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/04B_30__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1092, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "transition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -1092, -28 ), Vector2( -17, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -45.0
margin_top = -31.0
margin_right = 1064.0
margin_bottom = 631.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -74.5
margin_right = 108.5
margin_bottom = 74.5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 217.0
margin_bottom = 149.0

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "Resume"
flat = true

[node name="retry" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 217.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "retry"
flat = true

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 217.0
margin_bottom = 149.0
custom_colors/font_color = Color( 0.145098, 0.486275, 0.133333, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.627451, 0.454902, 1 )
custom_colors/font_color_pressed = Color( 0.0156863, 0.196078, 0.0156863, 1 )
custom_fonts/font = SubResource( 13 )
text = "Back"
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1092.0
margin_top = -28.0
margin_right = -31.0
margin_bottom = 637.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 14 )
anims/transition = SubResource( 15 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
